--- a/src/app/home/home/homedashboard/homedashboard.component.html
+++ b/src/app/home/home/homedashboard/homedashboard.component.html
@@ -170,8 +170,13 @@
                             <br>
                             <div class="subtitle"><span>{{forumObj.avator}}</span><span>{{forumObj.fromTime}}</span><span> {{forumObj.comment}}评论</span></div>
                           </div>
-                          <a routerLink="/home/home/content/{{forumObj._id}}" *ngIf="forumObj.images.length>0" title=" {{forumObj.title}}" class="img"
-                            [ngStyle]="{'background-image': 'url(' + forumObj.images[0] + ')'}"></a>
+                          
+                            <div  class="lbox" > 
+                                <a  class="img-wrap" routerLink="/home/home/content/{{forumObj._id}}" *ngIf="forumObj.images.length>0" title=" {{forumObj.title}}" class="img"
+                                  [ngStyle]="{'background-image': 'url(' + forumObj.images[0] + ')'}">
+                                  <i  class="ftype video"> <span> 4:05 </span> </i>
+                                </a>
+                            </div>
                         </div>
                         <div class="fixed_tool">
                             <!-- 首页不需要返回首页的功能 -->
@@ -185,8 +190,14 @@
                             <br>
                             <div class="subtitle"><span>{{forumObj.avator}}</span><span>{{forumObj.fromTime}}</span><span> {{forumObj.comment}}评论</span></div>
                           </div>
-                          <a routerLink="/home/home/content/{{forumObj._id}}" *ngIf="forumObj.images.length>0" title=" {{forumObj.title}}" class="img"
-                            [ngStyle]="{'background-image': 'url(' + forumObj.images[0] + ')'}"></a>
+                          
+
+                            <div  class="lbox" > 
+                                <a class="img-wrap" routerLink="/home/home/content/{{forumObj._id}}" *ngIf="forumObj.images.length>0" title=" {{forumObj.title}}" class="img"
+                                  [ngStyle]="{'background-image': 'url(' + forumObj.images[0] + ')'}">
+                                  <i  class="ftype video"> <span> 4:05 </span> </i>
+                                </a>
+                            </div>
                         </div>
                     
                         <div class="fixed_tool">
@@ -201,8 +212,15 @@
                             <br>
                             <div class="subtitle"><span>{{forumObj.avator}}</span><span>{{forumObj.fromTime}}</span><span> {{forumObj.comment}}评论</span></div>
                           </div>
-                          <a routerLink="/home/home/content/{{forumObj._id}}" *ngIf="forumObj.images.length>0" title=" {{forumObj.title}}" class="img"
-                            [ngStyle]="{'background-image': 'url(' + forumObj.images[0] + ')'}"></a>
+
+                          <div  class="lbox" > 
+                              <a class="img-wrap" routerLink="/home/home/content/{{forumObj._id}}" *ngIf="forumObj.images.length>0" title=" {{forumObj.title}}" class="img"
+                                [ngStyle]="{'background-image': 'url(' + forumObj.images[0] + ')'}">
+                                <i  class="ftype video"> <span> 4:05 </span> </i>
+                              </a>
+                            
+                          </div>
+                          
                         </div>
                         <div class="fixed_tool col-lg-2 col-md-2 col-sm-2">
                           <button class="btn btn-primary btn-block" (click)="changetoNews('C')"><i class="fa fa-circle pull-left"></i>点击查看全部</button>
@@ -215,8 +233,14 @@
                             <br>
                             <div class="subtitle"><span>{{forumObj.avator}}</span><span>{{forumObj.fromTime}}</span><span> {{forumObj.comment}}评论</span></div>
                           </div>
-                          <a routerLink="/home/home/content/{{forumObj._id}}" *ngIf="forumObj.images.length>0" title=" {{forumObj.title}}" class="img"
-                            [ngStyle]="{'background-image': 'url(' + forumObj.images[0] + ')'}"></a>
+                          <div  class="lbox" > 
+                              <a class="img-wrap" routerLink="/home/home/content/{{forumObj._id}}" *ngIf="forumObj.images.length>0" title=" {{forumObj.title}}" class="img"
+                                [ngStyle]="{'background-image': 'url(' + forumObj.images[0] + ')'}">
+                                <i  class="ftype video"> <span> 4:05 </span> </i>
+                              </a>
+                            
+                          </div>
+                          
                         </div>
                         <div class="fixed_tool col-lg-2 col-md-2 col-sm-2">
                           <button class="btn btn-primary btn-block" (click)="changetoNews('D')"><i class="fa fa-circle"></i>点击查看全部</button>
@@ -229,8 +253,13 @@
                             <br>
                             <div class="subtitle"><span>{{forumObj.avator}}</span><span>{{forumObj.fromTime}}</span><span> {{forumObj.comment}}评论</span></div>
                           </div>
-                          <a routerLink="/home/home/content/{{forumObj._id}}" *ngIf="forumObj.images.length>0" title=" {{forumObj.title}}" class="img"
-                            [ngStyle]="{'background-image': 'url(' + forumObj.images[0] + ')'}"></a>
+                          <div  class="lbox" > 
+                              <a  class="img-wrap" routerLink="/home/home/content/{{forumObj._id}}" *ngIf="forumObj.images.length>0" title=" {{forumObj.title}}" class="img"
+                                [ngStyle]="{'background-image': 'url(' + forumObj.images[0] + ')'}">
+                                <i  class="ftype video"> <span> 4:05 </span> </i>
+                              </a>
+                          </div>
+                          
                         </div>
                         <div class="fixed_tool col-lg-2 col-md-2 col-sm-2">
                           <button class="btn btn-primary btn-block" (click)="changetoNews('E')"><i class="fa fa-circle"></i>点击查看全部</button>
@@ -243,8 +272,13 @@
                             <br>
                             <div class="subtitle"><span>{{forumObj.avator}}</span><span>{{forumObj.fromTime}}</span><span> {{forumObj.comment}}评论</span></div>
                           </div>
-                          <a routerLink="/home/home/content/{{forumObj._id}}" *ngIf="forumObj.images.length>0" title=" {{forumObj.title}}" class="img"
-                            [ngStyle]="{'background-image': 'url(' + forumObj.images[0] + ')'}"></a>
+                          <div  class="lbox" > 
+                              <a  class="img-wrap" routerLink="/home/home/content/{{forumObj._id}}" *ngIf="forumObj.images.length>0" title=" {{forumObj.title}}" class="img"
+                                [ngStyle]="{'background-image': 'url(' + forumObj.images[0] + ')'}">
+                                <i  class="ftype video"> <span> 4:05 </span> </i>
+                              </a>
+                          </div>
+                          
                         </div>
                         <div class="fixed_tool col-lg-2 col-md-2 col-sm-2">
                           <button class="btn btn-primary btn-block" (click)="changetoNews('F')"><i class="fa fa-circle"></i>点击查看全部</button>
