--- a/src/app/home/home/live/receive-stream/receive-stream.component.html
+++ b/src/app/home/home/live/receive-stream/receive-stream.component.html
@@ -16,7 +16,7 @@
         <!--广告位信息  -->
         <div class="col-lg-8 col-md-12 col-sm-12">
           <div class="panel panel-default">
-            <div class="panel-heading font-bold">直播课程</div>
+            <div class="panel-heading font-bold">直播</div>
             <div class="panel-body" id="remoteVideosContainer">
               <canvas style="display:none"></canvas>
               <a id="link"></a>
@@ -78,7 +78,6 @@
             </div>
           </div>
         </div>
-
       </div>
     </div>
   </div>
