--- a/src/app/home/home/forums/forums.component.css
+++ b/src/app/home/home/forums/forums.component.css
@@ -1,1 +1,5 @@
+.lbox .img-wrap>img{width:100%;height:100%} 
+.lbox .ftype{position:absolute;right:10px;bottom:10px;height:22px;min-width:6px;line-height:22px;font-size:12px;color:#fff;background:#000;background:rgba(0,0,0,.5);padding:0 8px;border-radius:11px}
+.lbox .ftype.video span{padding-left:8px}
+.lbox .ftype.video:before{content:'';position:absolute;background:url(//s3.pstatp.com/toutiao/resource/ntoutiao_web/static/image/feed/video_icon_bf43446.png) left center no-repeat;width:6px;height:8px;top:50%;margin-top:-4px}
 .figure_loading{height:80px;line-height:80px;text-align:center;color:#c8c8c8}
