--- a/src/app/home/home/forums/forums.component.html
+++ b/src/app/home/home/forums/forums.component.html
@@ -1,9 +1,9 @@
 <!-- content -->
 <div id="content" class="app-content" role="main">
   <ol class="breadcrumb">
-      <li><a routerLink="/home">首页</a></li>
-      <li class="active">论坛</li>
-    </ol> 
+    <li><a routerLink="/home">首页</a></li>
+    <li class="active">论坛</li>
+  </ol>
   <div class="app-content-body ">
     <div class="wrapper-sm">
       <div class="row">
@@ -15,35 +15,55 @@
         </div>
         <!--广告位信息  -->
         <!--论坛的位子  -->
-        <div class="col-lg-8 col-md-12 col-sm-12">
+        <div class="col-lg-8 col-md-8 col-sm-12">
           <!-- 论坛分类-->
           <div class="col-lg-12 col-md-12 col-sm-12" style="padding:0">
             <div class="panel panel-default">
               <div class="app-content-body " style="padding:0">
+                <div class="wrapper-md" style="background:#fff;padding:10px;height:100px">
+                  <div class="input-group col-md-11 pull-right">
+                    <input type="text" style="height:35px" (keyup.enter)="keypress($event)" name="forumsearch" [(ngModel)]="searchString" class="form-control input-sm bg-light no-border rounded padder"
+                      placeholder="查询帖子...">
+                    <span class="input-group-btn">
+                              <button (click)="search()" style="height:35px" class="btn btn-sm bg-light rounded"><i class="fa fa-search"></i></button>
+                          </span>
+                  </div>
+                  <div class="line line-dashed b-b line-lg pull-in"></div>
+                  <div class="form-group">
+                    <label class="col-sm-1 control-label">标签:</label>
+                    <div class="col-sm-11">
+                      <button (click)="search()" class="btn btn-default bg-light rounded">钢琴</button>
+                    </div>
+                  </div>
+                </div>
                 <div class="wrapper-xs">
                   <div class="tab-container">
                     <ul class="nav nav-tabs" id="forumTab">
-                      <li [ngClass]="{active: i == 0}"  *ngFor="let subForum of instrumentSubForums;let i = index"><a href data-toggle="tab" data-target="#tab_{{i}}"> <i><img style="width:20px" src="./public/img/{{key}}{{i}}.png"></i> {{subForum}} </a></li>
+                      <li [ngClass]="{active: i == 0}" *ngFor="let subForum of instrumentSubForums;let i = index"><a href data-toggle="tab" data-target="#tab_{{i}}"> <i><img style="width:20px" src="./public/img/{{key}}{{i}}.png"></i> {{subForum}} </a></li>
                       <!-- <li><a href data-toggle="tab" data-target="#tab_2">钢琴<span class="badge bg-primary badge-sm m-l-xs">9</span></a></li>
                       <li><a href data-toggle="tab" data-target="#tab_3">其他<span class="badge bg-primary badge-sm m-l-xs">9</span></a></li> -->
-                       <li style="float:right">
-                        <button class="btn btn-success btn-block" (click)="issue()" >+发布帖子</button>
-                       </li>
+                      <li style="float:right">
+                        <button class="btn btn-success btn-block" (click)="issue()">+发布帖子</button>
+                      </li>
                     </ul>
-                    <div class="tab-content" >
-                      <div [ngClass]="{active:(i==0)}"  class="tab-pane"  id="tab_{{i}}" *ngFor="let subForum of instrumentSubForums; let i = index">
-                          <div class="figure flex-block" *ngFor="let forumObj of forumlist">
+                    <div class="tab-content">
+                      <div [ngClass]="{active:(i==0)}" class="tab-pane" id="tab_{{i}}" *ngFor="let subForum of instrumentSubForums; let i = index">
+                        <div class="figure flex-block" *ngFor="let forumObj of forumlist">
                           <div class="article flex-1">
                             <h2 class="figcaption"><a routerLink="../../content/{{forumObj._id}}" title="{{forumObj.title}}"> {{forumObj.title}}</a></h2>
                             <br>
                             <div class="subtitle"><span>{{forumObj.avator}}</span>
                               <span>   {{forumObj.fromTime}}</span>
                               <span>   {{forumObj.comment}}评论</span>
-                              <span>   {{forumObj.read}}查看</span> 
+                              <span>   {{forumObj.read}}查看</span>
                               <button *ngIf="forumObj.topup" class="btn btn-danger btn-xs">置顶</button>
                             </div>
                           </div>
-                            <a routerLink="../../content/{{forumObj._id}}" *ngIf="forumObj.images.length>0" title=" {{forumObj.title}}" class="img" [ngStyle]="{'background-image': 'url(' + forumObj.images[0] + ')'}"></a>
+                          <div class="lbox">
+                            <a class="img-wrap" routerLink="../../content/{{forumObj._id}}" *ngIf="forumObj.images.length>0" title=" {{forumObj.title}}"
+                              class="img" [ngStyle]="{'background-image': 'url(' + forumObj.images[0] + ')'}">
+                              <i  class="ftype video"> <span> 4:05 </span> </i>
+                            </a>
                           </div>
 
                           <div class="figure_loading" *ngIf="isloading">正在为你加载更多...</div>
@@ -52,6 +72,7 @@
                               <li><b>{{loadingText}}</b></li>
                             </ul>
                           </div> -->
+                        </div>
                       </div>
                     </div>
                   </div>
@@ -59,17 +80,17 @@
               </div>
             </div>
           </div>
+          <!--找琴的位子  -->
         </div>
-        <!--找琴的位子  -->
         <!--广告位信息  -->
-        <div class="col-lg-4 col-md-8 col-sm-12" *ngIf="adslist.length>0">
-          <div id="carousel-example-generic" class="carousel slide" data-ride="carousel" >
+        <div class="col-lg-4 col-md-4 col-sm-12" *ngIf="adslist.length>0">
+          <div id="carousel-example-generic" class="carousel slide" data-ride="carousel">
             <!-- Indicators -->
-            <ol class="carousel-indicators" >
-              <li data-target="#carousel-example-generic"  [ngClass]="{'active': i==0}" *ngFor="let ads of adslist;let i = index"></li>
+            <ol class="carousel-indicators">
+              <li data-target="#carousel-example-generic" [ngClass]="{'active': i==0}" *ngFor="let ads of adslist;let i = index"></li>
             </ol>
             <!-- Wrapper for slides -->
-            <div class="carousel-inner" role="listbox" >
+            <div class="carousel-inner" role="listbox">
               <div class="item " [ngClass]="{'active': i==0}" *ngFor="let ads of adslist;let i = index">
                 <a (click)="adsClick(ads)"><img src="{{ads.path}}"  alt="{{ads.subtitle}}"></a>
                 <div class="carousel-caption">
@@ -91,7 +112,28 @@
           </div>
         </div>
         <!--广告位信息  -->
+        <div class="col-lg-4 col-md-8 col-sm-12">
+          <div class="panel panel-default">
+            <div class="panel-heading font-bold">最热的帖子</div>
+            <div class="panel-body">
+              <div class="padder-md">
+                <div class="figure flex-block" *ngFor="let forumObj of hotlist">
+                  <div class="article flex-1">
+                    <h2 class="figcaption"><a routerLink="../../content/{{forumObj._id}}" title="{{forumObj.title}}"> {{forumObj.title}}</a></h2>
+                    <br>
+                    <div class="subtitle"><span>{{forumObj.avator}}</span>
+                      <span>   {{forumObj.fromTime}}</span>
+                      <span>   {{forumObj.comment}}评论</span>
+                      <span>   {{forumObj.read}}查看</span>
+
+                    </div>
+                  </div>
+
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
       </div>
     </div>
   </div>
-</div>
