--- a/src/app/home/home/homedashboard/homedashboard.component.css
+++ b/src/app/home/home/homedashboard/homedashboard.component.css
@@ -8,3 +8,7 @@
 .fixed_tool{position:absolute;bottom:20px;right:20px;opacity:0;-webkit-transition:all ease 2s;transition:all ease 2s}
 .fixed_tool img{display:block;width:50px;height:50px;cursor:pointer}
 .fixed_tool.show{opacity:1}
+.lbox .img-wrap>img{width:100%;height:100%} 
+.lbox .ftype{position:absolute;right:10px;bottom:10px;height:22px;min-width:6px;line-height:22px;font-size:12px;color:#fff;background:#000;background:rgba(0,0,0,.5);padding:0 8px;border-radius:11px}
+.lbox .ftype.video span{padding-left:8px}
+.lbox .ftype.video:before{content:'';position:absolute;background:url(//s3.pstatp.com/toutiao/resource/ntoutiao_web/static/image/feed/video_icon_bf43446.png) left center no-repeat;width:6px;height:8px;top:50%;margin-top:-4px}
