--- a/src/app/home/home/live/class/class.component.html
+++ b/src/app/home/home/live/class/class.component.html
@@ -18,7 +18,7 @@
             <div class="panel-heading font-bold">
               演奏鉴赏
               <div class="col-lg-3" style="float:right">
-                <button routerLink="/home/home/live/issueshow" class="btn btn-success btn-block btn-sm ">+开通直播</button>
+                <button routerLink="/home/home/live/issueshow" class="btn btn-info btn-block btn-sm ">+开通直播</button>
               </div>
             </div>
             <div class="panel-body">
@@ -74,7 +74,7 @@
                   <div class="panel-heading font-bold">
                     精品课程
                     <div class="col-lg-3" style="float:right">
-                      <button class="btn btn-success btn-block btn-sm " (click)="issue()">+发布课程</button>
+                      <button class="btn btn-info btn-block btn-sm " (click)="issue()">+发布课程</button>
                     </div>
                   </div>
                   <div class="panel-body">
