--- a/src/app/home/home/issue/issue.component.html
+++ b/src/app/home/home/issue/issue.component.html
@@ -46,7 +46,7 @@
               <!-- [froalaEditor]  -->
               <!-- [(ngModel)]="forum.content" -->
               <!-- ui-jq="froalaEditor" -->
-              <div  name="forumContent" id="forumContent"></div>
+              <div  name="forumissueContent" id="forumissueContent"></div>
             </div>
             </div>
             <div class="line line-dashed b-b line-lg pull-in"></div>
