--- a/src/app/dashboard/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard/dashboard.component.html
@@ -13,7 +13,7 @@
       <a href="#/" class="navbar-brand text-lt">
           <i class="fa fa-btc"></i>
           <img src="./public/img/logo.png" alt="." class="hide">
-          <span class="hidden-folded m-l-xs">乐器之家</span>
+          <span class="hidden-folded m-l-xs">异曲汇</span>
         </a>
       <!-- / brand -->
     </div>
