--- a/src/app/home/home/forget/forget.component.html
+++ b/src/app/home/home/forget/forget.component.html
@@ -1,6 +1,6 @@
 <div class="app app-header-fixed ">
   <div class="container w-xl w-auto-xs" ng-init="app.settings.container = false;">
-    <a href class="navbar-brand block m-t">乐器之家</a>
+    <a href class="navbar-brand block m-t">异曲汇</a>
     <div class="m-b-lg">
       <div class="wrapper text-center">
         <strong>请输入注册时填写的邮件地址或手机号码</strong>
