--- a/src/app/home/home/homedashboard/homedashboard.component.html
+++ b/src/app/home/home/homedashboard/homedashboard.component.html
@@ -9,15 +9,15 @@
     <div class="wrapper-sm">
       <div class="row">
         <!--广告位信息  -->
-        <div class="col-lg-12">
+        <!-- <div class="col-lg-12">
           <div class="panel ">
             <div class="panel-body">col-lg-12</div>
           </div>
-        </div>
+        </div> -->
         <!--广告位信息  -->
         <!--找琴的位子  -->
         <div class="col-lg-8 col-md-12 col-sm-12">
-          <div class="col-lg-12 col-md-12 col-sm-12" style="padding:0">
+          <!-- <div class="col-lg-12 col-md-12 col-sm-12" style="padding:0">
             <div class="panel ">
               <div class="panel-body">
                 <div class="app-content-body " style="padding:0">
@@ -42,7 +42,7 @@
                                 <label class="col-sm-2 control-label">具体分类</label>
                                 <div class="col-sm-4">
                                   <select name="subtype" id="selectSubType" [(ngModel)]="subType" placeholder="请选择具体分类" class="form-control m-b">
-                                    <!-- <option value="">请选择具体分类</option> -->
+                                    
                                     <option *ngFor="let s of subtypes" value="{{s}}">{{s}}</option>
                                   </select>
                                 </div>
@@ -69,8 +69,7 @@
                           <div class="panel-footer bg-light lter">
                             <button class="btn btn-info pull-right btn-sm"><i class="fa fa-circle"></i> 查看</button>
                             <ul class="nav nav-pills nav-sm">
-                              <!-- <li><a href><i class="fa fa-camera text-muted"></i></a></li>
-                      <li><a href><i class="fa fa-video-camera text-muted"></i></a></li> -->
+                              
                             </ul>
                           </div>
                         </div>
@@ -120,8 +119,7 @@
                           <div class="panel-footer bg-light lter">
                             <button class="btn btn-info pull-right btn-sm"><i class="fa fa-circle"></i> 查看</button>
                             <ul class="nav nav-pills nav-sm">
-                              <!-- <li><a href><i class="fa fa-camera text-muted"></i></a></li>
-                      <li><a href><i class="fa fa-video-camera text-muted"></i></a></li> -->
+                              
                             </ul>
                           </div>
                         </div>
@@ -131,11 +129,11 @@
                 </div>
               </div>
             </div>
-          </div>
+          </div> -->
 
           <!--新闻资讯  论坛分类-->
           <div class="col-lg-12 col-md-12 col-sm-12" style="padding:0">
-            <div class="panel panel-default">
+            <div class="panel ">
               <div class="app-content-body " style="padding:0">
                 <div class="wrapper-xs">
                   <div class="tab-container">
