--- a/src/app/home/home/live/class/class.component.html
+++ b/src/app/home/home/live/class/class.component.html
@@ -8,11 +8,11 @@
     <div class="wrapper-sm">
       <div class="row">
         <!--广告位信息  -->
-        <div class="col-lg-12">
+        <!-- <div class="col-lg-12">
           <div class="panel ">
             <div class="panel-body">col-lg-12</div>
           </div>
-        </div>
+        </div> -->
         <div class="col-lg-6">
           <div class="panel panel-default">
             <div class="panel-heading font-bold">
@@ -23,16 +23,17 @@
             </div>
             <div class="panel-body">
               <div class="col-lg-4 col-md-6 col-xs-6" *ngFor="let show of showlist">
-                <a (click)="openlive(show)" class="d-block mb-4 h-100">
-                   <img class="img-fluid img-thumbnail" src="{{show.image}}" alt="">
-                 </a>
-                 <div class="top">
-                  {{show.types}}
-                </div>
-                 <div class="status">
-                  <button class="btn m-b-xs w-xs  btn-rounded disabled" [ngClass]="{'btn-danger': show.status=='直播中'}">{{show.status}}</button>
-                </div>
-                 {{show.avator}}
+                  
+                  <a (click)="openlive(show)" class="d-block mb-4 h-100">
+                    <img class="img-fluid img-thumbnail" src="{{show.image}}" alt="">
+                  </a>
+                  <div class="top">
+                      {{show.types}}演奏
+                  </div>
+                  <div class="status">
+                    <button class="btn  btn-xs  btn-rounded disabled" [ngClass]="{'btn-danger': show.status=='直播中'}">{{show.status}}</button>
+                  </div>
+                  {{show.avator}}
               </div>
             </div>
           </div>
@@ -145,15 +146,10 @@
                             </ul>
                           </div>
                         </div>
-                        <div class="tab-pane" id="tab-3">
-                          <div class="wrapper-md">
-      
-                          </div>
-                        </div>
                       </div>
                     </div>
                   </div>
-                  <div class="panel-footer">col-lg-12</div>
+                  <!-- <div class="panel-footer">col-lg-12</div> -->
                 </div>
               </div>
         </div>
