--- a/src/app/home/home/live/receive-stream/receive-stream.component.html
+++ b/src/app/home/home/live/receive-stream/receive-stream.component.html
@@ -8,11 +8,11 @@
     <div class="wrapper-sm">
       <div class="row">
         <!--广告位信息  -->
-        <div class="col-lg-12">
+        <!-- <div class="col-lg-12">
           <div class="panel ">
             <div class="panel-body">col-lg-12</div>
           </div>
-        </div>
+        </div> -->
         <!--广告位信息  -->
         <div class="col-lg-8 col-md-12 col-sm-12">
           <div class="panel panel-default">
