--- a/src/app/home/home/news/news.component.html
+++ b/src/app/home/home/news/news.component.html
@@ -9,11 +9,11 @@
     <div class="wrapper-sm">
       <div class="row">
         <!--广告位信息  -->
-        <div class="col-lg-12">
+        <!-- <div class="col-lg-12">
           <div class="panel ">
             <div class="panel-body">col-lg-12</div>
           </div>
-        </div>
+        </div> -->
         <!--广告位信息  -->
         <!--全部新闻资讯位子  -->
         <div class="col-lg-8 col-md-8 col-sm-12"  id="newsPanel">
