--- a/src/app/home/home/praise/praise.component.html
+++ b/src/app/home/home/praise/praise.component.html
@@ -14,11 +14,11 @@
     <div class="wrapper-sm">
       <div class="row">
         <!--广告位信息  -->
-        <div class="col-lg-12">
+        <!-- <div class="col-lg-12">
           <div class="panel">
             <div class="panel-body">col-lg-12</div>
           </div>
-        </div>
+        </div> -->
         <!--产品信息描述和产品配置请说明  -->
         <div class="col-lg-8 col-md-8 col-sm-12 col-xs-12">
           <div class="panel panel-default ">
