--- a/src/app/home/home/score/scoreplay/scoreplay.component.html
+++ b/src/app/home/home/score/scoreplay/scoreplay.component.html
@@ -9,11 +9,11 @@
     <div class="wrapper-sm">
       <div class="row">
         <!--广告位信息  -->
-        <div class="col-lg-12">
+        <!-- <div class="col-lg-12">
           <div class="panel ">
             <div class="panel-body">col-lg-12</div>
           </div>
-        </div>
+        </div> -->
         <div class="col-lg-8 col-md-12 col-sm-12">
           <div class="col-lg-12 col-md-12 col-sm-12">
             <h2>{{score.title}}</h2>
