--- a/src/app/dashboard/dashboard/forum-list/forum-list.component.html
+++ b/src/app/dashboard/dashboard/forum-list/forum-list.component.html
@@ -20,7 +20,7 @@
             <div class="line line-dashed b-b line-lg pull-in"></div>
             <label class="col-sm-2 control-label">请输入论坛信息</label>
               <div class="col-sm-10">
-                <div ui-jq="froalaEditor" [froalaEditor] name="forumContent" id="forumContent" [(ngModel)]="forum.content"></div>
+                <div  name="forumContent" id="forumContent" ></div>
               </div>
             <div class="line line-dashed b-b line-lg pull-in"></div>
             <div class="form-group">
